--- a/src/app/products/product-list/product-list.component.html
+++ b/src/app/products/product-list/product-list.component.html
@@ -4,4 +4,13 @@
     <button (click)="deleteProduct(product)">DEL</button>
   </li>
 </ul>
-<h1>Virker det???</h1>
+<h1>New Product</h1>
+
+<form [formGroup]="productFormGroup" (submit)="addProduct()">
+  <label>
+    Name
+    <input [type]="text" formControlName="name">
+  </label>
+  <button type="submit">Submit</button>
+</form>
+<input type="file" (change)="uploadFile($event)">
